[project]
name = "lift-pdf"
version = "0.1.0"
description = "Extract structured data from PDFs and images by passing a schema."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Vik Paruchuri", email = "vik@datalab.to" },
]
requires-python = ">=3.12"
keywords = ["pdf", "extraction", "structured-data", "ocr", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]
dependencies = [
    "click>=8.1.0",
    "filetype>=1.2.0",
    "json-schema-to-pydantic>=0.4.11",
    "openai>=2.40.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pypdfium2>=5.9.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
hf = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=5.2.0",
    "accelerate>=1.11.0",
]
app = [
    "pandas>=2.2.0",
    "streamlit>=1.45.0",
]
all = [
    "lift-pdf[hf,app]",
]

[project.urls]
Homepage = "https://github.com/datalab-to/lift"
Repository = "https://github.com/datalab-to/lift"
Issues = "https://github.com/datalab-to/lift/issues"

[project.scripts]
lift_extract = "lift.scripts.extract_cli:main"
lift_vllm = "lift.scripts.vllm_launcher:main"
lift_app = "lift.scripts.app_launcher:main"

[dependency-groups]
dev = [
    "lift-pdf[app]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lift"]
